--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,7 @@ section{
   margin-top: 44px;
   font-family: Montserrat;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 20px;
   color: #b48349;
   -webkit-transition: all .3s ease;
@@ -1014,7 +1014,6 @@ section{
 }
 .consultation {
   position: relative;
-  border-bottom: 1px solid rgba(180,131,73,.3);
   padding-bottom: 100px
 }
 .consultation h3 {
@@ -1170,7 +1169,9 @@ section{
   text-align: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center
+  align-items: center;
+  border-top: 1px solid rgba(180,131,73,.3);
+  margin-top: 100px;
 }
 .footer__logo {
   margin-bottom: 68px;
@@ -1567,7 +1568,7 @@ section{
     margin-bottom: 80px
   }
   .team__text p{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 16px;
     color: #CCCCCC;
     max-width: 80%;
@@ -1578,7 +1579,7 @@ section{
   }
   .team__item .item__text{
     margin-bottom: 25px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
   }
   .team__item .item__name{
@@ -1587,7 +1588,7 @@ section{
     margin-bottom: 45px;
   }
   .team__item .item__description{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
   }
 }
@@ -2214,7 +2215,7 @@ section{
   .footer__menu li {
     margin: 15px 0;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 14px;
     line-height: normal
   }
   .footer__tel {
@@ -2251,7 +2252,7 @@ section{
   }
   .footer__social a {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 25px
   }
   .footer__social li {
@@ -2382,7 +2383,7 @@ section{
     line-height: 20px
   }
   p {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px
   }
   .investment__item .item__circle:before {
@@ -2492,7 +2493,7 @@ section{
   }
   .consultation__main__info input {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px
   }
   .aboutme__more a,
@@ -2616,19 +2617,16 @@ section{
   justify-content: space-between;
   margin-bottom: 100px;
 }
-.section-saling__top .section-saling__text i {
+.section-saling__top .section-saling__text i{
   color: inherit;
   font-size: inherit;
   text-transform: uppercase;
-  display: contents;
 }
 .section-saling__top .section-saling__text {
   border: 1px solid #B48349;
   padding: 27px 42px;
   font-size: 18px;
   line-height: 30px;
-  display: flex;
-  align-items: center;
   color: #DEBF9A;
   border-radius: 26px;
   width: fit-content;
@@ -2778,7 +2776,7 @@ section{
   }
   .section-saling__top .section-saling__text {
     padding: 23px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
   }
   .section-saling__top{
@@ -2804,7 +2802,7 @@ section{
 }
 @media screen and (max-width: 576px) {
   .section-saling__bottom span{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19px;
     margin: 0 10px;
   }
@@ -3113,7 +3111,7 @@ color: #FFFFFF;
   }
 
   .learning p.subtitle{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
     color: #CCCCCC;
     margin-top: 40px;
@@ -3195,6 +3193,27 @@ color: #FFFFFF;
   align-items: center;
 }
 
+@media screen and (max-width: 1720px) {
+  .catalog .catalog__image{
+    left: -200px;
+  }
+}
+@media screen and (max-width: 1520px) {
+ .catalog .catalog__image{
+    left: -300px;
+  } 
+}
+@media screen and (max-width: 1420px) {
+  .catalog .catalog__image{
+    left: -400px;
+  }  
+}
+@media screen and (max-width: 1277px) {
+  .catalog .catalog__image{
+    left: -500px;
+    bottom: 400px;
+  } 
+}
 @media screen and (max-width: 992px) {
   .catalog .catalog__image{
     position: static;
@@ -3213,7 +3232,7 @@ color: #FFFFFF;
   .catalog h3:nth-child(2) span{
     display: inline-block;
     margin-left: 0;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19px;
     padding: 8px 10px;
   }
@@ -3228,7 +3247,7 @@ color: #FFFFFF;
     grid-gap: 20px;
   }
   .catalog__inner ul li{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 17px;
   }
 }
@@ -3347,7 +3366,7 @@ color: #FFFFFF;
   }
   .visa__title h5 span{
     padding: 0 10px;
-    line-height: 60px;
+    line-height: 50px;
   }
 }
 
@@ -3390,7 +3409,7 @@ color: #FFFFFF;
     font-size: 40px;
   }
   .visa__title h4 span{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19px;
   }
   .visa__title h4 {
@@ -3588,7 +3607,7 @@ color: #FFFFFF;
     height: auto;
   }
   .graph__block p{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
     text-align: center;
     color: #CCCCCC;
@@ -3629,7 +3648,7 @@ color: #FFFFFF;
   .graph__text p{
     margin-bottom: 45px;
     margin-top: 35px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
     color: #CCCCCC;
   }
